# vct

./: Cargo.toml  readme.md
bind_group/: Cargo.toml
bind_group/derive/: Cargo.toml
bind_group/derive/src/: lib.rs
bind_group/src/: lib.rs  types.rs
bind_group/src/types/: matrix.rs
examples/: sponza.rs
examples/sponza/: NewSponza_Curtains_glTF.gltf  NewSponza_Main_glTF_002.gltf
src/: camera.rs  command_encoder.rs  lib.rs  lights.rs  load_gltf.rs  mesh.rs  renderer.rs  scene.rs  texture.rs  transform.rs  vertex.rs
src/command_encoder/: forward.rs  present.rs
src/command_encoder/shaders/: _structs.wgsl  count_voxels.wgsl  forward.wgsl  shader.wgsl  voxel_mip_map.wgsl
src/command_encoder/voxelization/: meshify.rs  mod.rs
src/model/: material.rs  mesh.rs  mod.rs
src/renderer/: context.rs  load_gltf.rs  mesh.rs  render_pass.rs  scene.rs  shader_effect.rs  voxelization.rs
src/renderer/shaders/: count_voxels.wgsl  shader.wgsl  voxel_instancing.wgsl  voxel_render.wgsl  voxelization.wgsl
src/renderer/voxelization/: meshify.rs  mod.rs
src/resources/: mod.rs
tests/: bind_group.rs  bind_group_derive.rs  buffer.rs  buffer.wgsl  new_hostshareable.rs  new_hostshareable.wgsl  unit_struct_bind_group.rs
wgpu_helper/: Cargo.toml
wgpu_helper/derive/: Cargo.toml
wgpu_helper/derive/src/: bind_group_helpers.rs  lib.rs
wgpu_helper/src/: bind_group.rs  lib.rs  types.rs
wgpu_helper/src/types/: matrix.rs  scalar.rs  vector.rs
