[package]
name = "vct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu_helper = { path = "wgpu_helper" }

wgpu = "0.18"
winit = "0.28"
# nalgebra = "0.32"
nalgebra-glm = "0.18"
bytemuck = { version = "1.12", features = ["derive"] }
instant = "0.1"
gltf = { version = "1.3", features = ["KHR_lights_punctual"] }
image = "0.24"
uuid = { version = "1.6", features = ["v4", "fast-rng"]}

[dev-dependencies]
image = "0.24.7"
pollster = "0.3"


[[example]]
name = "sponza"
